--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "http-proxy": "^1.18.1",
     "lucide-react": "^0.559.0",
     "next": "16.0.8",
     "react": "19.2.1",
